--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require": {
         "phpmailer/phpmailer": "^7.0",
         "vlucas/phpdotenv": "^5.6"
+    },
+    "require-dev": {
+        "robmorgan/phinx": "^0.16.10"
     }
 }
